<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.BlackManagerActivity"
    >

    <TextView
        style="@style/titlebarStyle"
        android:text="@string/blacklistadd"/>

    <TextView
        style="@style/SetupTextViewStyle"
        android:text="@string/blackphonenumber"/>

    <EditText
        android:id="@+id/et_bm_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_selector"
        android:hint="@string/notempty"
        android:inputType="number"
        android:singleLine="true"/>

    <RelativeLayout
        android:id="@+id/select_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_primary_selector"
        android:clickable="true">

        <TextView
            style="@style/SetupTextViewStyle"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/selectphonenumber"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <TextView
        style="@style/SetupTextViewStyle"
        android:text="@string/blacktype"/>

    <RadioGroup
        android:id="@+id/rg_ba_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rg_ba_type_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/blacktypephone"/>

        <RadioButton
            android:id="@+id/rg_ba_type_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blacktypesms"/>

        <RadioButton
            android:id="@+id/rg_ba_type_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blacktypeall"/>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/tb_ba_OK"
                style="@style/NormalBtnStyle.OK"
                android:layout_weight="1"
                android:background="@drawable/btn_info_selector"
                android:gravity="center"
                android:text="@string/save"/>

            <Button
                android:id="@+id/tb_ba_cancel"
                style="@style/NormalBtnStyle.OK"
                android:layout_weight="1"
                android:background="@drawable/btn_info_selector"
                android:gravity="center"
                android:text="@string/cancel"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>