<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/titlebarStyle"
        android:text="@string/phonelost"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:text="@string/safenumber"/>

        <TextView
            android:id="@+id/tv_sjfd_number"
            style="@style/NormalTextViewStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            tools:text="123"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_sjfd_protect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/sjfd_bg_select"
        android:gravity="center_vertical">

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:text="@string/isopenphonelost"/>

        <ImageView
            android:id="@+id/iv_setup_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@mipmap/lock"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_enter_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/sjfd_bg_select">

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:text="@string/reinsetting"/>
    </RelativeLayout>

    <TextView
        style="@style/NormalTextViewStyle"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:padding="10dp"
        android:text="@string/functionintrodution"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/fungps"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/funwipe"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/funmusic"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/funlock"/>

</LinearLayout>