<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/settingTitlebarStyle"
        android:text="@string/welcome"/>

    <TextView
        style="@style/SetupTextViewStyle"
        android:text="@string/yours"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/simcard"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/gps"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/remotelockscreen"/>

    <TextView
        style="@style/SetupTextViewItemStyle"
        android:text="@string/remotewipedate"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/hm"/>

        <Button
            style="@style/NextBtnStyle"
            android:text="@string/next"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point_selected"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>