<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/titlebarStyle"
        android:text="@string/numberaddress"/>

    <EditText
        android:id="@+id/et_add_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/input_shape_normal"
        android:hint="@string/inputchecknumber"
        android:inputType="number"/>

    <Button
        android:id="@+id/bt_query_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_primary_selector"
        android:padding="12dp"
        android:text="@string/checkout"/>

    <TextView
        android:id="@+id/tv_address"
        style="@style/NormalTextViewStyle"
        android:layout_margin="5dp"
        android:text="@string/numberaddressis"/>


</LinearLayout>