<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableLeft="@mipmap/li"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/initpassword"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/dialog_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/dialog_et_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/validatepassword"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_ok"
            style="@style/NormalBtnStyle"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/dialog_btn_cancel"
            style="@style/NormalBtnStyle"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>