<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:mo="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/titlebarStyle"
            android:text="@string/processmanager"/>

        <ImageView
            android:id="@+id/iv_clean"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:src="@drawable/pp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_process"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/processcount"/>

            <TextView
                android:id="@+id/tv_run_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_process"
                android:text="@string/runningprocess"/>

            <TextView
                android:id="@+id/tv_process_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/processtotal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_memory"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/memory"/>

            <TextView
                android:id="@+id/tv_used_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_memory"
                android:text="@string/usedmemory"/>

            <TextView
                android:id="@+id/tv_vaild_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/vaildmemory"/>
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">

            <include
                layout="@layout/normal_loading"/>
        </RelativeLayout>

        <se.emilsjolander.stickylistheaders.StickyListHeadersListView
            android:id="@+id/lv_process_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/button_material_light"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/btn_info_selector"
            android:paddingBottom="30dp">

        </se.emilsjolander.stickylistheaders.StickyListHeadersListView>

        <SlidingDrawer
            android:id="@+id/sd_pull"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:content="@+id/content"
            android:handle="@+id/handle">

            <LinearLayout
                android:id="@+id/handle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/drawer_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_arrow_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/drawer_arrow_up"/>

                <ImageView
                    android:id="@+id/iv_arrow_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_arrow_up"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_material_light"
                android:orientation="vertical">

                <mo.com.phonesafe.view.SettingItemView
                    android:id="@+id/siv_show_sysprp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    mo:sivBackground="green"
                    mo:sivTitle="@string/showsystemprocess"/>

                <mo.com.phonesafe.view.SettingItemView
                    android:id="@+id/siv_auto_clean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    mo:sivBackground="purple"
                    mo:sivTitle="@string/lockscreenautoclean"/>
            </LinearLayout>
        </SlidingDrawer>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            style="@style/NormalBtnStyle.OK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="allSelect"
            android:text="@string/selectall"/>

        <Button
            style="@style/NormalBtnStyle.OK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="unSelect"
            android:text="@string/unselectall"/>
    </LinearLayout>
</LinearLayout>
