<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/settingTitlebarStyle"
        android:text="@string/settingsafenumber"/>

    <TextView
        style="@style/SetupTextViewStyle"
        android:text="@string/safenumberdescription"/>

    <EditText
        android:id="@+id/sjfd_et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/inputsafenumber"
        android:inputType="phone"/>

    <RelativeLayout
        android:id="@+id/select_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_primary_selector"
        android:clickable="true">

        <TextView
            style="@style/SetupTextViewStyle"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/selectsafenumber"
            android:textColor="@android:color/white"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/hm"/>

        <Button
            style="@style/PreBtnStyle"
            android:text="@string/back"/>

        <Button
            style="@style/NextBtnStyle"
            android:text="@string/next"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_selected"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>