<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/settingTitlebarStyle"
        android:text="@string/activitdevicesadmin"/>

    <TextView
        style="@style/SetupTextViewStyle"
        android:text="@string/devicesadmindescription"/>

    <RelativeLayout
        android:id="@+id/set_rl_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="@drawable/btn_primary_selector"
        android:clickable="true">

        <TextView
            style="@style/SetupTextViewStyle"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/clickactivity"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/set_iv_admin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/i"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/hm"/>
        <Button
            style="@style/PreBtnStyle"
            android:text="@string/back"/>

        <Button
            style="@style/NextBtnStyle"
            android:text="@string/next"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_selected"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/point_normal"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>